read points from drawn route on map

--- a/admin.html
+++ b/admin.html
@@ -35,7 +35,7 @@
           <span class="emphasis formtext">Color: </span><input class ="textbox" type="text"></input><br>
           <span class="emphasis formtext">Time: </span><input class ="textbox" type="text"></input><br>
           <span class="emphasis formtext">Width: </span><input class ="textbox" type="text"></input><br>
-          <div class="button formtext" type="button">Submit</div>
+          <div class="button formtext" onclick="Admin.submitForm()" type="button">Submit</div>
         </div>
       </div>
     </div>
