allow submitting new routes

--- a/admin.html
+++ b/admin.html
@@ -29,12 +29,12 @@
       <div class = "mapPanel">
         <div id="mapid" style="height: 75%;float: left; width: 100%; background-color:black;z-index:0;"></div>
         <div class="mapform">
-          <span class="emphasis formtext">Name: </span><input class ="textbox" type="text"></input><br>
-          <span class="emphasis formtext">Description: </span><input class ="textbox" type="text"></input><br>
-          <span class="emphasis formtext">Enabled: </span><input class ="textbox" type="text"></input><br>
-          <span class="emphasis formtext">Color: </span><input class ="textbox" type="text"></input><br>
-          <span class="emphasis formtext">Time: </span><input class ="textbox" type="text"></input><br>
-          <span class="emphasis formtext">Width: </span><input class ="textbox" type="text"></input><br>
+          <span class="emphasis formtext">Name: </span><input class ="textbox" id="name" type="text"></input><br>
+          <span class="emphasis formtext">Description: </span><input class ="textbox" id="desc" type="text"></input><br>
+          <span class="emphasis formtext">Enabled: </span><input class ="textbox" id="en" type="text"></input><br>
+          <span class="emphasis formtext">Color: </span><input class ="textbox" id="color" type="text"></input><br>
+          <span class="emphasis formtext">Time: </span><input class ="textbox" id="time" type="text"></input><br>
+          <span class="emphasis formtext">Width: </span><input class ="textbox" id="width" type="text"></input><br>
           <div class="button formtext" onclick="Admin.submitForm()" type="button">Submit</div>
         </div>
       </div>
