still working on posting

--- a/admin.html
+++ b/admin.html
@@ -29,13 +29,16 @@
       <div class = "mapPanel">
         <div id="mapid" style="height: 75%;float: left; width: 100%; background-color:black;z-index:0;"></div>
         <div class="mapform">
-          <span class="emphasis formtext">Name: </span><input class ="textbox" id="name" type="text"></input><br>
-          <span class="emphasis formtext">Description: </span><input class ="textbox" id="desc" type="text"></input><br>
-          <span class="emphasis formtext">Enabled: </span><input class ="textbox" id="en" type="text"></input><br>
-          <span class="emphasis formtext">Color: </span><input class ="textbox" id="color" type="text"></input><br>
-          <span class="emphasis formtext">Time: </span><input class ="textbox" id="time" type="text"></input><br>
-          <span class="emphasis formtext">Width: </span><input class ="textbox" id="width" type="text"></input><br>
-          <div class="button formtext" onclick="Admin.submitForm()" type="button">Submit</div>
+          <form action="/routes/create" method="post">
+            <span class="emphasis formtext">Name: </span><input class ="textbox" name="name" type="text"></input><br>
+            <span class="emphasis formtext">Description: </span><input class ="textbox" name="desc" type="text"></input><br>
+            <span class="emphasis formtext">Enabled: </span><input class ="textbox" name="en" type="text"></input><br>
+            <span class="emphasis formtext">Color: </span><input class ="textbox" name="color" type="text"></input><br>
+            <span class="emphasis formtext">Time: </span><input class ="textbox" name="time" type="text"></input><br>
+            <span class="emphasis formtext">Width: </span><input class ="textbox" name="width" type="text"></input><br>
+            <input type="hidden" id="routeCoords" name="routeCoords"></input>
+            <input class="button formtext" type="submit"></input>
+          </form>
         </div>
       </div>
     </div>
