--- a/admin.html
+++ b/admin.html
@@ -2,13 +2,18 @@
   <head>
     <title> Shuttle Tracking - Fleet Management </title>
     <link rel="icon" href="/static/images/favicon.ico">
+
     <link rel="stylesheet" href="/static/css/admin.css">
     <link rel="stylesheet" href="/static/dist/leaflet/leaflet.css"></link>
     <script src="/static/dist/leaflet/leaflet.js"></script>
     <script src="/static/dist/leaflet/leaflet.rotatedMarker.js"></script>
+    <link rel="stylesheet" href="/static/dist/leaflet-routing/leaflet-routing-machine.css" />
+    <script src="/static/dist/leaflet-routing/leaflet-routing-machine.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
+
     <script src="/static/js/admin.js"></script>
 
   </head>
