greatly improved method to add a route

--- a/admin.html
+++ b/admin.html
@@ -32,6 +32,7 @@
       <div class = "routePanel">
       </div>
       <div class = "mapPanel">
+        <div class="button undoButton" onclick="Admin.removeLastPoint()">undo</div>
         <div id="mapid" style="height: 70%;float: left; width: 100%; background-color:black;z-index:0;"></div>
         <div class="mapform">
           <form id="routeform" action="/routes/create" method="post" content-type="application/json">
@@ -43,6 +44,8 @@
             <span class="emphasis formtext">Width: </span><input class ="textbox" id="width" type="text"></input><br>
             <input type="hidden" id="routeCoords" name="coords"></input>
             <div class="button formtext" onclick="Admin.submitForm()"> Submit</div>
+            <div class="button formtext" onclick="Admin.getJson()"> GetJson</div>
+
           </form>
         </div>
       </div>
