--- a/admin.html
+++ b/admin.html
@@ -11,19 +11,17 @@
     <script src="/static/dist/leaflet-routing/leaflet-routing-machine.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
-
     <script src="/static/js/admin.js"></script>
 
   </head>
   <body>
     <div class="prompt">
       <div class ="prompt-box">
-          <p class="emphasis prompttext"> Are you sure? </p>
+          <div class="button cb" style="float:right; width: 40px; margin-right:10px;" onclick="$('.prompt').css('display','none');">close</div>
+          <p class="emphasis prompttext"> Enter Json </p>
           <div class ="center">
-          <button class = "button cbutton pbutton">Yes</button>
-          <button class = "button cbutton pbutton">No</button>
+            <textarea id="jsonField" style="width:100%;height:75%;"></textarea>
+          <button onclick="Admin.submitChange()" class = "button cbutton pbutton">Enter</button>
         </div>
       </div>
     </div>
@@ -43,8 +41,8 @@
             <span class="emphasis formtext">Time: </span><input class ="textbox" id="time" type="text"></input><br>
             <span class="emphasis formtext">Width: </span><input class ="textbox" id="width" type="text"></input><br>
             <input type="hidden" id="routeCoords" name="coords"></input>
-            <div class="button formtext" onclick="Admin.submitForm()"> Submit</div>
-            <div class="button formtext" onclick="Admin.getJson()"> GetJson</div>
+            <div class="button formtext" onclick="Admin.submitForm(JSON.stringify(Admin.pullForm()))"> Submit</div>
+            <div class="button formtext" onclick="Admin.getJson(JSON.stringify(Admin.pullForm()))"> GetJson</div>
 
           </form>
         </div>
