--- a/admin.html
+++ b/admin.html
@@ -47,8 +47,8 @@
 
             <span class="emphasis formtext">Width: </span><input class ="textbox" id="width" type="text"></input><br>
             <input type="hidden" id="routeCoords" name="coords"></input>
-            <div class="button formtext" onclick="Admin.submitForm(JSON.stringify(Admin.pullForm()))"> Submit</div>
-            <div class="button formtext" onclick="Admin.getJson(JSON.stringify(Admin.pullForm()))"> GetJson</div>
+            <div class="button formtext" onclick="Routes.submitForm(JSON.stringify(Routes.pullForm()))"> Submit</div>
+            <div class="button formtext" onclick="Routes.getJson(JSON.stringify(Routes.pullForm()))"> GetJson</div>
 
           </form>
         </div>
