--- a/admin.html
+++ b/admin.html
@@ -1,90 +1,52 @@
-<!doctype html>
 <html>
   <head>
     <title> Shuttle Tracking - Fleet Management </title>
     <link rel="icon" href="/static/images/favicon.ico">
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="/static/css/application.css">
-    <!-- Polymer dependencies -->
-    <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <link rel="import" href="/bower_components/polymer/polymer.html">
-    <!-- Iron Elements -->
-    <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
-    <link rel="import" href="/bower_components/iron-pages/iron-pages.html">
-    <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
-    <!-- Paper Elements -->
-    <link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
-    <link rel="import" href="/bower_components/paper-toolbar/paper-toolbar.html">
-    <link rel='import' href='/bower_components/paper-tabs/paper-tabs.html'>
-    <link rel='import' href='/bower_components/paper-item/paper-item.html'>
-    <!-- Custom Polymer elements -->
-    <link rel="import" href="/static/components/shuttles-map.html">
-    <link rel="import" href="/static/components/tracking-vehicles.html">
-    <link rel="import" href="/static/components/tracking-routes.html">
-    <link rel="import" href="/static/components/tracking-stops.html">
+
+    <link rel="stylesheet" href="/static/css/admin.css">
+    <link rel="stylesheet" href="/static/dist/leaflet/leaflet.css"></link>
+    <script src="/static/dist/leaflet/leaflet.js"></script>
+    <script src="/static/dist/leaflet/leaflet.rotatedMarker.js"></script>
+    <link rel="stylesheet" href="/static/dist/leaflet-routing/leaflet-routing-machine.css" />
+    <script src="/static/dist/leaflet-routing/leaflet-routing-machine.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/static/js/admin.js"></script>
+
   </head>
+  <body>
 
-  <body unresolved class="fullbleed layout vertical">
+    <div class ="navbar">
+      <p class="title">RPI Shuttle Tracker</p>
+      <a class ="logout button" href="/admin/logout/">Logout</a>
+      <div class ="button logout" onclick="Admin.showMapPanel();">Create Route</div>
+    </div>
+    <div class="docBody">
+      <div class = "routePanel">
+      </div>
+      <div class = "mapPanel">
+        <div class="button undoButton" onclick="Admin.removeLastPoint()">Undo</div>
+        <div id="mapid" style="height: 70%;float: left; width: 100%; background-color:black;z-index:0;"></div>
+        <div class="mapform">
+          <form id="routeform" action="/routes/create" method="post" content-type="application/json">
+            <span class="emphasis formtext">Name: </span><input class ="textbox" id="name" type="text"></input><br>
+            <span class="emphasis formtext">Description: </span><input class ="textbox" id="desc" type="text"></input><br>
+            <span class="emphasis formtext">Enabled: </span><input class ="textbox" id="en" type="text"></input><br>
+            <span class="emphasis formtext">Color: </span><input class ="textbox" id="color" type="text"></input><br>
+            <span class="emphasis formtext">StartTime: </span><input class ="textbox" id="startTimeTime" type="text" value=""></span><input class ="textbox" id="startTimeDay" type="text" value="day"></input><br>
+            <span class="emphasis formtext">EndTime: </span><input class ="textbox" id="endTimeTime" type="text" value="time"></span><input class ="textbox" id="endTimeDay" type="text" value="day"></input><br>
 
-    <template is="dom-bind">
-      <paper-header-panel class="flex">
+            <span class="emphasis formtext">Width: </span><input class ="textbox" id="width" type="text"></input><br>
+            <input type="hidden" id="routeCoords" name="coords"></input>
+            <div class="button formtext" onclick="Routes.submitForm(JSON.stringify(Routes.pullForm()))"> Submit</div>
+            <div class="button formtext" onclick="Routes.getJson(JSON.stringify(Routes.pullForm()))"> GetJson</div>
 
-        <paper-toolbar>
-          <paper-tabs class="flex" selected="{{selected}}">
-            <paper-tab> Vehicles </paper-tab>
-            <paper-tab> Routes </paper-tab>
-            <paper-tab> Stops </paper-tab>
-
-          </paper-tabs>
-        </paper-toolbar>
-        <div align = "center">
-          <br>
-          <a href = "/admin/logout"> logout </a>
+          </form>
         </div>
-        <iron-pages selected="{{selected}}">
-          <section>
-            <!-- Vehicles -->
-            <tracking-vehicles><tracking-vehiclfes>
-          </section>
-          <section>
-            <!-- Routes -->
-            <tracking-routes lat="42.730172" lng="-73.678803" zoom="15"></tracking-routes>
-          </section>
-          <section>
-            <tracking-stops lat="42.730172" lng="-73.678803" zoom="15"></tracking-stops>
-          </section>
-        </iron-pages>
-      </paper-header-panel>
-    </template>
-    <script>
-      // return to previously selected tab on page reload
-      function prevSelected() {
-        if (document.cookie) {
-          var cookies = document.cookie.split(";");
-          for (i = 0; i < cookies.length; i++) {
-            var cookie = cookies[i].split("=");
-            if (cookie[0].replace(/ /g,'') == "selectedTab") {
-              return cookie[1];
-            }
-          }
-        }
-        return 0;
-      }
-      // set current selected tab
-      function setSelected(tab) {
-        document.cookie = "selectedTab=" + tab + ";";
-      }
-      // select the first page when site is loaded
-      document.addEventListener('WebComponentsReady', function () {
-        var template = document.querySelector('template[is="dom-bind"]');
-        template.selected = prevSelected();
-        setSelected(template.selected);
-      });
-      // store selected tab when paper tab is selected
-      document.addEventListener('click', function() {
-        var template = document.querySelector('template[is="dom-bind"]');
-        setSelected(template.selected);
-      });
-    </script>
+      </div>
+      <div class = "stopPanel">
+
+      </div>
+    </div>
   </body>
 </html>
