functional vehicle interface written in vuejs

--- a/admin.html
+++ b/admin.html
@@ -20,7 +20,9 @@
     <div class ="navbar">
       <p class="title">RPI Shuttle Tracker</p>
       <a class ="logout button" href="/admin/logout/">Logout</a>
-      <div class ="button logout" onclick="Admin.showMapPanel();">Create Route</div>
+      <div class ="button logout" onclick="Admin.toggleDisplay();">Toggle Route Display</div>
+      <div class ="button logout rtb" onclick="Admin.showMapPanel();">Create Route</div>
+
     </div>
 
     <div class="docBody" id="document-vue">
