main interface rewritten in vuejs

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 </head>
 
 <body>
-    <div class ="main-body" id="app-vue">
+    <div id="app-vue" style="height:100%;">
       <title-bar></title-bar>
+      <shuttle-map></shuttle-map>
     </div>
-    <div id="mapid" style="height: 100%; z-index:0;"></div>
     <script src="static/js/frontend.js"></script>
 </body>
 
