--- a/admin.html
+++ b/admin.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="docBody" id="app-vue">
+      <sidebar></sidebar>
       <titlebar></titlebar>
     </div>
     <script src="/static/js/admin.js"></script>
