Basic Stop Editing functionality implemeneted

--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,11 @@
     <div class="docBody" id="app-vue">
       <sidebar></sidebar>
       <titlebar></titlebar>
+      <main-pane></main-pane>
     </div>
+    <script src="/static/js/stops.js"></script>
+    <script src="/static/js/routes.js"></script>
+    <script src="/static/js/vehicles.js"></script>
     <script src="/static/js/admin.js"></script>
   </body>
 </html>
