--- a/admin.html
+++ b/admin.html
@@ -11,8 +11,8 @@
     <script src="/static/dist/leaflet-routing/leaflet-routing-machine.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/vue"></script>
-    <script src="/static/js/admin.js"></script>
+    <script src="/static/dist/vue/vue"></script>
+    <script src="/static/dist/vue/vue2.5.3.js"></script>
 
   </head>
   <body>
