Added a basic admin alert box

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div id="app-vue" style="height:100%;">
       <title-bar></title-bar>
       <shuttle-map></shuttle-map>
+      <message-display></message-display>
     </div>
     <script src="static/js/frontend.js"></script>
 </body>
