Restructure layout with bulma

--- a/admin.html
+++ b/admin.html
@@ -1,18 +1,19 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title> Shuttle Tracking - Fleet Management </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/static/images/favicon.ico">
-
     <link rel="stylesheet" href="/static/css/admin.css">
     <link rel="stylesheet" href="/static/dist/leaflet/leaflet.css"></link>
     <script src="/static/dist/leaflet/leaflet.js"></script>
     <script src="/static/dist/leaflet/leaflet.rotatedMarker.js"></script>
     <link rel="stylesheet" href="/static/dist/leaflet-routing/leaflet-routing-machine.css" />
     <script src="/static/dist/leaflet-routing/leaflet-routing-machine.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/static/dist/vue/vue.min.js"></script>
     <script src="/static/js/admin.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.css"></link>
 
   </head>
   <body>
