temporarily add bulma cdn

--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
 
     <link rel="stylesheet" href="/static/css/admin.css">
     <link rel="stylesheet" href="/static/dist/leaflet/leaflet.css"></link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.css"></link>
     <script src="/static/dist/leaflet/leaflet.js"></script>
     <script src="/static/dist/leaflet/leaflet.rotatedMarker.js"></script>
     <link rel="stylesheet" href="/static/dist/leaflet-routing/leaflet-routing-machine.css" />
