--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,8 @@
     <script src="/static/js/stops.js"></script>
     <script src="/static/js/routes.js"></script>
     <script src="/static/js/vehicles.js"></script>
+    <script src="/static/js/messages.js"></script>
     <script src="/static/js/admin.js"></script>
+
   </body>
 </html>
