--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,11 @@
     <script src="/static/dist/vue/vue.min.js"></script>
     <script src="/static/js/admin.js"></script>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.3.4/vue.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/Sortable/1.6.0/Sortable.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/2.14.1/vuedraggable.min.js"></script>
+
+
   </head>
   <body>
     <div class="docBody" id="app-vue">
