--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <title-bar></title-bar>
       <shuttle-map></shuttle-map>
     </div>
-    <script src="static/js/frontend.js"></script>
+    <script src="static/js/frontend.js?q=1"></script>
 </body>
 
 </html>
