--- a/schedule_east.html
+++ b/schedule_east.html
@@ -28,6 +28,6 @@
         </table>
         <p v-else>No match data...</p>
     </script>
-	<script src="static/js/south_east.js"></script>
+	<script src="static/js/schedule_east.js"></script>
 
 </html>
