--- a/schedule_east.html
+++ b/schedule_east.html
@@ -7,16 +7,17 @@
 	
 	<body>
     <div id="grid">
-		<input type="text" v-model="searchQuery" placeholder="please enter text" />
-        <demo-grid :rows="rowData" :columns="columnData" :filter-key="searchQuery">
-            <!--注意这里不能出现驼峰式-->
+		<input type="text" v-model="searchQuery" placeholder="please enter the location" />
+		<input type="text" v-model="searchQuery2" placeholder="please enter the time" />
+        <demo-grid :rows="rowData" :columns="columnData" :filter-key="searchQuery" :filter-key2="searchQuery2"  >
         </demo-grid>
+		
     </div>
     <script type="text/x-template" id="grid-template">
         <table v-if="filterData.length">
             <thead>
                 <th v-for="col in columns" @click="order(col)">{{col}}
-                    <!--不同的列有不同的排序，需要一个保存列的排序对象setOrder-->
+                   //Set the rder of the table
                     <span class="arrow" :class="setOrder[col] > 0 ? 'asc':'dsc'"></span>
                 </th>
             </thead>
