--- a/schedule_east.html
+++ b/schedule_east.html
@@ -6,6 +6,26 @@
     </head>
 	
 	<body>
+	<!-- multiQuery-->
+	<div id='app'>
+<template v-if='condition.length'>
+	<div>
+<span>Choose Stop:<span>
+	<span v-for='(item,index) in condition' class='active'>{{item.name}}&nbsp;|&nbsp;</span>
+	</div>
+</template>
+<template v-if='category.length'>
+	<div class='nav' v-for='(items,index) in category'>
+		<div class='mutil-query-title' v-if='items.name' :key="items.id">{{items.name}}<span style='margin-left: 20px;' @click='allIn(index)'>All</span>|<span @click='remove(index)'>Clear</span></div>
+		<ol v-if='items.items.length'>
+			<li v-for='(item,key) in items.items'>
+				<span :class="{'active':item.active}" @click='handle(index,key)' :key='item.id'>{{item.name}}</span>
+			</li>
+		</ol>
+	</div>
+</template>
+</div>
+<!-- table-->
     <div id="grid">
 		<input type="text" v-model="searchQuery" placeholder="please enter the location" />
 		<input type="text" v-model="searchQuery2" placeholder="please enter the time" />
@@ -17,7 +37,7 @@
         <table v-if="filterData.length">
             <thead>
                 <th v-for="col in columns" @click="order(col)">{{col}}
-                   //Set the rder of the table
+                   <!--Set the rder of the table-->
                     <span class="arrow" :class="setOrder[col] > 0 ? 'asc':'dsc'"></span>
                 </th>
             </thead>
