enable return home function

--- a/title1.html
+++ b/title1.html
@@ -21,17 +21,13 @@
 				<div class="titleBar">
 					<ul class="titleContent">
 						<li class="dropdown-main-item">
-							<a class="dropdown-icon">
+							<a href="https://shuttles.rpi.edu/">
 								<img class="dropdown-icon" src="/frontend/src/admin/images/menu.svg">
 							</a>
 							<!---->
 						</li>
 						<li class="title">RPI Shuttle Tracker</li>
 					</ul>
-					<div class="livebox">
-						<p>Live </p>
-						<div class="pulsate"></div>
-					</div>
 					<!---->
 					<div class="logo">
 						<a href="https://webtech.union.rpi.edu/">
