--- a/title1.html
+++ b/title1.html
@@ -21,7 +21,7 @@
 				<div class="titleBar">
 					<ul class="titleContent">
 						<li class="dropdown-main-item">
-							<a href="https://shuttles.rpi.edu/">
+							<a href="index.html">
 								<img class="dropdown-icon" src="/frontend/src/admin/images/menu.svg">
 							</a>
 							<!---->
