correct web title

--- a/schedule_east.html
+++ b/schedule_east.html
@@ -17,7 +17,7 @@
 							</a>
 							<!---->
 						</li>
-						<li class="title">RPI Shuttle Tracker</li>
+						<li class="title">East Shuttle Schedule</li>
 					</ul>
 					<!---->
 				</div>
