--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>icon.png">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>icon.png">
+    <link rel="mask-icon" href="<%= BASE_URL %>icon.svg" color="#DA3731">
     <title>Shuttle Tracker</title>
   </head>
   <body>
