--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>icon.png">
     <link rel="apple-touch-icon" href="<%= BASE_URL %>icon.png">
-    <link rel="mask-icon" href="<%= BASE_URL %>icon.svg" color="#DA3731">
+    <link rel="mask-icon" href="<%= BASE_URL %>icon.svg" color="#ED1C24">
     <title>Shuttle Tracker</title>
   </head>
   <body>
