--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="<%= BASE_URL %>icon.png">
     <link rel="apple-touch-icon" href="<%= BASE_URL %>icon.png">
     <link rel="mask-icon" href="<%= BASE_URL %>icon.svg" color="#ED1C24">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Shuttle Tracker</title>
   </head>
   <body>
