--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>icon.png">
     <link rel="apple-touch-icon" href="<%= BASE_URL %>icon.png">
     <link rel="mask-icon" href="<%= BASE_URL %>icon.svg" color="#ED1C24">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Shuttle Tracker</title>
   </head>
   <body>
