use vue-analytics with Vue Router integration

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,18 +11,9 @@
   </head>
   <body>
     <noscript>
-      <strong>The Shuttle Tracker doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Shuttle Tracker doesn't work properly without JavaScript. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-28203673-6"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments) };
-        gtag('js', new Date());
-        gtag('config', 'UA-28203673-6');
-    </script>
   </body>
 </html>
