--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="<%= BASE_URL %>icon.png">
     <link rel="mask-icon" href="<%= BASE_URL %>icon.svg" color="#ED1C24">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description">Find out where Rensselaer's shuttles are. View shuttle routes, stops, and schedules.</meta>
+    <meta name="description" content="Find out where Rensselaer's shuttles are. View shuttle routes, stops, and schedules.">
     <title>Shuttle Tracker</title>
   </head>
   <body>
